--- a/package.json
+++ b/package.json
@@ -6,10 +6,16 @@
     "dev": "bun run --watch src/index.ts"
   },
   "dependencies": {
+    "@elysiajs/cookie": "^0.8.0",
+    "@elysiajs/lucia-auth": "^1.1.0",
+    "@elysiajs/swagger": "^1.1.6",
+    "@lucia-auth/adapter-prisma": "^4.0.1",
+    "@prisma/client": "^5.22.0",
     "elysia": "latest"
   },
   "devDependencies": {
-    "bun-types": "latest"
+    "bun-types": "latest",
+    "prisma": "^5.22.0"
   },
   "module": "src/index.js"
 }
